--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "django-extensions>=3.2.3",
     "factory-boy>=3.3.2",
     "djangorestframework>=3.15.2",
+    "drf-spectacular>=0.28.0",
 ]
 
 [dependency-groups]
