--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "factory-boy>=3.3.2",
     "djangorestframework>=3.15.2",
     "drf-spectacular>=0.28.0",
+    "httpx>=0.28.1",
 ]
 
 [dependency-groups]
